--- a/PMUL/Buscaminas/res/values-en/strings.xml
+++ b/PMUL/Buscaminas/res/values-en/strings.xml
@@ -8,5 +8,17 @@
     <string name="num_minas">Number of mines</string>
     <string name="rows">Number of rows</string>
     <string name="cols">Number of columns</string>
+    <string name="win">You win!</string>
+    <string name="acerca_de">Minesweeper created by Fernando Quilez Esquitino for PMUL subject of 2nd year of Multiplatform Application Development</string>
+    <string name="title_activity_about">About</string>
+    <string name="egg0">You! Stop touch me! :@</string>
+    <string name="egg1">Really, stop touch me! :@@</string>
+    <string name="egg2">Do not repeat more times, stop touch me.</string>
+	<string name="egg3">Seriously, forget me ¬¬</string>
+	<string name="title_activity_ranking">Ranking</string>
+	<string name="ranking">Ranking</string>
+	<string name="reset">Reset ranking</string>
+	<string name="mines">Mines: </string>
+	<string name="lose">You lose</string>
 
 </resources>
